--- a/conf/www.linked.data.gov.au.conf
+++ b/conf/www.linked.data.gov.au.conf
@@ -9,15 +9,19 @@
 
         RewriteEngine  on
 
+        # supports redirects from the persistent domain with nice URIs
         ProxyPass "/def/"  "http://203.101.224.166/def/"
         ProxyPassReverse "/def/"  "http://203.101.224.166/def/"
 
+        # supports CSS and other web theming for the main website and other resources
         ProxyPass "/theme/"  "http://203.101.224.166/theme/"
         ProxyPassReverse "/theme/"  "http://203.101.224.166/theme/"
 
+        # supports legacy domain reference.data.gov.au by revealing a static dir of its content on this server
         ProxyPass "/reference.data.gov.au"  "http://203.101.224.166/reference.data.gov.au"
         ProxyPassReverse "/reference.data.gov.au"  "http://203.101.224.166/reference.data.gov.au"
 
+        # the main AGLDWG static website, source at https://github.com/AGLDWG/AGLDWG-website
         ProxyPass "/"  "http://203.101.224.166/agldwg-website/"
         ProxyPassReverse "/"  "http://203.101.224.166/agldwg-website/"
 </VirtualHost>
