fixed copying errors

--- a/conf/test.linked.data.gov.au.conf
+++ b/conf/test.linked.data.gov.au.conf
@@ -14,7 +14,7 @@
         RewriteRule   "/person/(.+)"  "http://test.linked.data.gov.au/dataset/auorg/object?uri=http://test.linked.data.gov.au/person/$1"  [R=303,L,QSA]
         RewriteRule   "/portfolio/(.+)"  "http://test.linked.data.gov.au/dataset/auorg/object?uri=http://test.linked.data.gov.au/portfolio/$1"  [R=303,L,QSA]
 
-        RewriteRule   "/dataset/auorg/([a-zA-Z]+)/(.+)"  "http://test.linked.data.gov.au/dataset/auorg/object?uri=http://test.linked.data.gov.au/dataset/auorg/$1/$2"  [R=303,L,QS$
+        RewriteRule   "/dataset/auorg/([a-zA-Z]+)/(.+)"  "http://test.linked.data.gov.au/dataset/auorg/object?uri=http://test.linked.data.gov.au/dataset/auorg/$1/$2"  [R=303,L,QSA]
 
         ProxyPass         "/org/"  "http://13.236.122.60/dataset/auorg/org/"
         ProxyPassReverse  "/org/"  "http://13.236.122.60/dataset/auorg/org/"
@@ -31,7 +31,7 @@
         ProxyPass "/dataset/auorg"  "http://13.236.122.60/dataset/auorg"
         ProxyPassReverse "/dataset/auorg"  "http://13.236.122.60/dataset/auorg"
 
-        RewriteRule   "/dataset/odrl-policies/([a-zA-Z]+)/(.+)"  "http://test.linked.data.gov.au/dataset/odrl-policies/object?uri=http://test.linked.data.gov.au/dataset/odrl-poli$
+        RewriteRule   "/dataset/odrl-policies/([a-zA-Z]+)/(.+)"  "http://test.linked.data.gov.au/dataset/odrl-policies/object?uri=http://test.linked.data.gov.au/dataset/odrl-policies/$1/$2"  [R=303,L,QSA]
         RewriteRule   "/license/(.+)"  "http://test.linked.data.gov.au/dataset/odrl-policies/object?uri=http://test.linked.data.gov.au/license/$1"  [R=303,L,QSA]
 
         ProxyPass         "/license/"  "http://13.236.122.60/dataset/odrl-policies/license/"
