minor syntax fixes in testing

--- a/conf/environment.data.gov.au.conf
+++ b/conf/environment.data.gov.au.conf
@@ -5,6 +5,17 @@
 #
 # Implemented from PID Svc rules by Edmond Chuc, 13/08/2018
 #
+
+# environment.data.gov.au homepage
+<VirtualHost *>
+        ServerName environment.data.gov.au	
+
+	DocumentRoot /var/www/html/environment.data.gov.au
+	DirectoryIndex index.html
+
+	ErrorLog ${APACHE_LOG_DIR}/environment.data.gov.au/error.log
+	CustomLog ${APACHE_LOG_DIR}/environment.data.gov.au/access.log combined
+
 RewriteEngine on
 
 
@@ -970,3 +981,5 @@ RewriteRule ^water\/id\/(catchment|riverregion|drainagedivision|stream|waterbody
 RewriteRule ^water\/id\/(catchment|riverregion|drainagedivision|stream|waterbody)\/?$ http://sirf.csiro.au/sissvoc/dna/resource?uri=http://environment.data.gov.au%{REQUEST_URI} [L,R=302]
 #
 ###############################
+
+</VirtualHost>
