--- a/conf/infrastructure.data.gov.au.conf
+++ b/conf/infrastructure.data.gov.au.conf
@@ -9,7 +9,9 @@
 # (the only other pattern) has been deprecated. Nick Car, 13/08/2018
 #
 <VirtualHost *>
-        ServerName infrastructure.data.gov.au
+	ServerName infrastructure.data.gov.au
+        DocumentRoot /var/www/html/infrastructure.data.gov.au
+        DirectoryIndex index.html
 
         RewriteEngine on
         RewriteRule ^/dataset/eudm/([0-9a-f\-]{36})$ http://eudm.csiro.au/assets/$1 [L]
