--- a/conf/reference.data.gov.au.conf
+++ b/conf/reference.data.gov.au.conf
@@ -25,5 +25,5 @@
         # All handling of reference.data.gov.au done by AGLDWG web server which contains static copies of all
         # definitional assests made using it at /var/www/html/reference.data.gov.au/.
         #
-        RedirectMatch ^(.+)$ http://www.linked.data.gov.au/reference.data.gov.au$1
+        RedirectMatch ^(.*)$ http://www.linked.data.gov.au/reference.data.gov.au$1
 </VirtualHost>
