fixed env glossary pattern

--- a/conf/environment.data.gov.au.conf
+++ b/conf/environment.data.gov.au.conf
@@ -259,7 +259,7 @@ RewriteRule ^def\/op$ http://registry2.it.csiro.au/def/op [L,R=302]
 # --- output:   http://registry2.it.csiro.au/def/ba/glossary
 #
 # --- comment: Originally it was a proxy on PID service, now a regular redirect
-RewriteRule ^def\/ba\/glossary(\/.*)$ http://registry2.it.csiro.au/def/ba/glossary%1 [L,R=302]
+RewriteRule ^/def/ba/glossary(/.*)$ http://registry2.it.csiro.au/def/ba/glossary$1 [L,R=302]
 #
 ###############################
 
