--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -18,16 +18,61 @@
         Options Includes FollowSymLinks MultiViews
 
         #
-        #       PIDs
+        #	PIDs
+	#
+
         #
-        # Definitional resources
-        RewriteRule   "/def(.*)"  "http://www.linked.data.gov.au/def$1"  [R=302,L]
-        # Datasets
-        RewriteRule   "/dataset(.*)"  "http://www.linked.data.gov.au/dataset$1"  [R=302,L]
+        #	Definitional resources
+	#
+
+	# http://linked.data.gov.au/def/reg-status
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/def/reg-status(.*)$ http://www.linked.data.gov.au/def/reg-status$1.ttl?  [R=302,L]
+
+	RewriteCond %{HTTP:Accept} text/turtle [NC]
+	RewriteRule ^/def/reg-status(.*)$ "http://www.linked.data.gov.au/def/reg-status$1.ttl"  [R=302,L]
+
+        RewriteRule ^/def/reg-status(.*)$ "http://www.linked.data.gov.au/def/reg-status$1" [R=302,L]
+
+
+        # http://linked.data.gov.au/def/placenames
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/def/placenames(.*)$ http://www.linked.data.gov.au/def/placenames$1.ttl?  [R=302,L]
+
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/placenames(.*)$ "http://www.linked.data.gov.au/def/placenames$1.ttl"  [R=302,L]
+
+        RewriteRule ^/def/placenames(.*)$ "http://www.linked.data.gov.au/def/placenames$1" [R=302,L]
+
+	#
+        #	Datasets
+	#
+        # http://linked.data.gov.au/dataset/gnaf
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/dataset/gnaf$ http://gnafld.net/index.ttl?  [R=302,L]
+
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/gnaf$ "http://gnafld.net/index.ttl"  [R=302,L]
+
+        RewriteRule ^/dataset/gnaf.ttl$ http://gnafld.net/index.ttl?  [R=302,L]
+
+
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/dataset/gnaf(.*)$ http://gnafld.net$1.ttl?  [R=302,L]
+
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/gnaf(.*)$ "http://gnafld.net$1.ttl"  [R=302,L]
+
+        RewriteRule ^/dataset/gnaf(.*).ttl$ http://gnafld.net$1.ttl?  [R=302,L]
+
+
+        RewriteRule ^/dataset/gnaf(.*)$ "http://gnafld.net$1" [R=302,L]
 
         #
         #       AGLDWG website - legacy link redirector
         #
+
+	#
         #       All new www.linked.data.gov.au patterns must be added to www.linked.data.gov.au.conf, not here
         #
         RewriteRule   "/([a-z]+)(.html)?"  "http://www.linked.data.gov.au/$1"  [R=302,L]
