homepages for legacy PID URIs on webserver

--- a/conf/infrastructure.data.gov.au.conf
+++ b/conf/infrastructure.data.gov.au.conf
@@ -10,9 +10,12 @@
 #
 <VirtualHost *>
 	ServerName infrastructure.data.gov.au
-        DocumentRoot /var/www/html/infrastructure.data.gov.au
-        DirectoryIndex index.html
 
         RewriteEngine on
+
+        # homepage
+        RewriteRule ^/$ http://www.linked.data.gov.au/environment.data.gov.au [L,R=302]
+
+	# EUDM datasets
         RewriteRule ^/dataset/eudm/([0-9a-f\-]{36})$ http://eudm.csiro.au/assets/$1 [L]
 </VirtualHost>
