--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -30,9 +30,9 @@
         RewriteRule ^/def/reg-status(.*)$ http://www.linked.data.gov.au/def/reg-status$1.ttl?  [R=302,L]
 
 	RewriteCond %{HTTP:Accept} text/turtle [NC]
-	RewriteRule ^/def/reg-status(.*)$ "http://www.linked.data.gov.au/def/reg-status$1.ttl"  [R=302,L]
+	RewriteRule ^/def/reg-status(.*)$ http://www.linked.data.gov.au/def/reg-status$1.ttl  [R=302,L]
 
-        RewriteRule ^/def/reg-status(.*)$ "http://www.linked.data.gov.au/def/reg-status$1" [R=302,L]
+        RewriteRule ^/def/reg-status(.*)$ http://www.linked.data.gov.au/def/reg-status$1 [R=302,L]
 
 
         # http://linked.data.gov.au/def/placenames
@@ -40,9 +40,9 @@
         RewriteRule ^/def/placenames(.*)$ http://www.linked.data.gov.au/def/placenames$1.ttl?  [R=302,L]
 
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/placenames(.*)$ "http://www.linked.data.gov.au/def/placenames$1.ttl"  [R=302,L]
+        RewriteRule ^/def/placenames(.*)$ http://www.linked.data.gov.au/def/placenames$1.ttl  [R=302,L]
 
-        RewriteRule ^/def/placenames(.*)$ "http://www.linked.data.gov.au/def/placenames$1" [R=302,L]
+        RewriteRule ^/def/placenames(.*)$ http://www.linked.data.gov.au/def/placenames$1 [R=302,L]
 
 	#
         #	Datasets
@@ -52,21 +52,26 @@
         RewriteRule ^/dataset/gnaf$ http://gnafld.net/index.ttl?  [R=302,L]
 
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/gnaf$ "http://gnafld.net/index.ttl"  [R=302,L]
+        RewriteRule ^/dataset/gnaf$ http://gnafld.net/index.ttl  [R=302,L]
 
         RewriteRule ^/dataset/gnaf.ttl$ http://gnafld.net/index.ttl?  [R=302,L]
 
 
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
-        RewriteRule ^/dataset/gnaf(.*)$ http://gnafld.net$1.ttl?  [R=302,L]
+        RewriteRule ^/dataset/gnaf(.*)$ $1.ttl?
 
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/gnaf(.*)$ "http://gnafld.net$1.ttl"  [R=302,L]
+        RewriteRule ^/dataset/gnaf(.*)$ $1.ttl
 
-        RewriteRule ^/dataset/gnaf(.*).ttl$ http://gnafld.net$1.ttl?  [R=302,L]
+        RewriteRule ^/dataset/gnaf(.*).ttl$ http://gnafld.net$1.ttl? [R=302,L]
 
+        RewriteRule ^/(.*)/.ttl$ http://gnafld.net/$1/index.ttl [R=302,L]
+	RewriteRule ^/(.*).ttl$ http://gnafld.net/$1.ttl [R=302,L]
 
-        RewriteRule ^/dataset/gnaf(.*)$ "http://gnafld.net$1" [R=302,L]
+        RewriteRule ^/dataset/gnaf(.*)$ http://gnafld.net$1 [R=302,L]
+
+	
+
 
         #
         #       AGLDWG website - legacy link redirector
@@ -75,6 +80,6 @@
 	#
         #       All new www.linked.data.gov.au patterns must be added to www.linked.data.gov.au.conf, not here
         #
-        RewriteRule   "/([a-z]+)(.html)?"  "http://www.linked.data.gov.au/$1"  [R=302,L]
-        RewriteRule   "/"  "http://www.linked.data.gov.au/"  [R=302,L]
+        RewriteRule   /([a-z]+)(.html)?  http://www.linked.data.gov.au/$1  [R=302,L]
+        RewriteRule   /  http://www.linked.data.gov.au/  [R=302,L]
 </VirtualHost>
