--- a/conf/test.linked.data.gov.au.conf
+++ b/conf/test.linked.data.gov.au.conf
@@ -45,4 +45,46 @@
 
         ProxyPass "/"  "http://203.101.224.166/"
         ProxyPassReverse "/"  "http://203.101.224.166/"
+
+
+        # Tests - PID URIs in the catalogue
+
+        # FSDF Ontology - QSA
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/def/fsdf(.*)$ https://raw.githubusercontent.com/GeoscienceAustralia/fsdf-ont/master/fsdf$1.ttl [R=302,L]
+        # FSDF Ontology - Conneg
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/fsdf(.*)$ https://raw.githubusercontent.com/GeoscienceAustralia/fsdf-ont/master/fsdf$1.ttl [R=302,L]
+        # FSDF Ontology - explicit .ttl extension
+        RewriteRule ^/def/fsdf.ttl$ https://raw.githubusercontent.com/GeoscienceAustralia/fsdf-ont/master/fsdf$1.ttl [R=302,L]
+        # FSDF Ontology - HTML (catch-all)
+        RewriteRule ^/def/fsdf(.*)$ https://github.com/GeoscienceAustralia/fsdf-ont$1 [R=302,L]
+
+        # ISO19160 Ontology - QSA
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/def/iso19160-1-address(.*)$ http://reference.data.gov.au/def/ont/iso19160-1-address$1.ttl [R=302,L]
+        # ISO19160 Ontology - Conneg
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/iso19160-1-address(.*)$ http://reference.data.gov.au/def/ont/iso19160-1-address$1.ttl [R=302,L]
+        # ISO19160 Ontology - HTML (catch-all)
+        RewriteRule ^/def/iso19160-1-address(.*)$ http://reference.data.gov.au/def/ont/iso19160-1-address$1 [R=302,L]
+
+        # ISO19160 NZ Profile Ontology - QSA
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/def/iso19160-1-address-nz-profile(.*)$ http://reference.data.gov.au/def/ont/iso19160-1-address-nz-profile$1.ttl [R=302,L]
+        # ISO19160 NZ Profile Ontology - Conneg
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/iso19160-1-address-nz-profile(.*)$ http://reference.data.gov.au/def/ont/iso19160-1-address-nz-profile$1.ttl [R=302,L]
+        # ISO19160 NZ Profile Ontology - HTML (catch-all)
+        RewriteRule ^/def/iso19160-1-address-nz-profile(.*)$ http://reference.data.gov.au/def/ont/iso19160-1-address-nz-profile$1 [R=302,L]
+
+       # AGRIF Ontology - QSA
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/def/agrif(.*)$ http://reference.data.gov.au/def/ont/agrif$1.ttl [R=302,L]
+        # AGRIF Ontology - Conneg
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/agrif(.*)$ http://reference.data.gov.au/def/ont/agrif$1.ttl [R=302,L]
+        # AGRIF Ontology - HTML (catch-all)
+        RewriteRule ^/def/agrif(.*)$ http://reference.data.gov.au/def/ont/agrif$1 [R=302,L]
+
 </VirtualHost>
