--- a/conf/test.linked.data.gov.au.conf
+++ b/conf/test.linked.data.gov.au.conf
@@ -51,7 +51,7 @@
 
         # FSDF Ontology - QSA
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
-        RewriteRule ^/def/fsdf(.*)$ https://raw.githubusercontent.com/GeoscienceAustralia/fsdf-ont/master/fsdf$1.ttl [R=302,L]
+        RewriteRule ^/def/fsdf(.*)$ https://raw.githubusercontent.com/GeoscienceAustralia/fsdf-ont/master/fsdf$1.ttl? [R=302,L]
         # FSDF Ontology - Conneg
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/fsdf(.*)$ https://raw.githubusercontent.com/GeoscienceAustralia/fsdf-ont/master/fsdf$1.ttl [R=302,L]
@@ -62,7 +62,7 @@
 
         # ISO19160 Ontology - QSA
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
-        RewriteRule ^/def/iso19160-1-address(.*)$ http://reference.data.gov.au/def/ont/iso19160-1-address$1.ttl [R=302,L]
+        RewriteRule ^/def/iso19160-1-address(.*)$ http://reference.data.gov.au/def/ont/iso19160-1-address$1.ttl? [R=302,L]
         # ISO19160 Ontology - Conneg
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/iso19160-1-address(.*)$ http://reference.data.gov.au/def/ont/iso19160-1-address$1.ttl [R=302,L]
@@ -71,7 +71,7 @@
 
         # ISO19160 NZ Profile Ontology - QSA
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
-        RewriteRule ^/def/iso19160-1-address-nz-profile(.*)$ http://reference.data.gov.au/def/ont/iso19160-1-address-nz-profile$1.ttl [R=302,L]
+        RewriteRule ^/def/iso19160-1-address-nz-profile(.*)$ http://reference.data.gov.au/def/ont/iso19160-1-address-nz-profile$1.ttl? [R=302,L]
         # ISO19160 NZ Profile Ontology - Conneg
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/iso19160-1-address-nz-profile(.*)$ http://reference.data.gov.au/def/ont/iso19160-1-address-nz-profile$1.ttl [R=302,L]
@@ -80,7 +80,7 @@
 
        # AGRIF Ontology - QSA
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
-        RewriteRule ^/def/agrif(.*)$ http://reference.data.gov.au/def/ont/agrif$1.ttl [R=302,L]
+        RewriteRule ^/def/agrif(.*)$ http://reference.data.gov.au/def/ont/agrif$1.ttl? [R=302,L]
         # AGRIF Ontology - Conneg
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/agrif(.*)$ http://reference.data.gov.au/def/ont/agrif$1.ttl [R=302,L]
