Missed one change

--- a/conf/test.linked.data.gov.au.conf
+++ b/conf/test.linked.data.gov.au.conf
@@ -56,7 +56,7 @@
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/fsdf(.*)$ http://www.linked.data.gov.au/def/fsdf$1.ttl [R=302,L]
         # FSDF Ontology - HTML (catch-all)
-        RewriteRule ^/def/fsdf(.*)$ https://github.com/GeoscienceAustralia/fsdf-ont$1 [R=302,L]
+        RewriteRule ^/def/fsdf(.*)$ http://www.linked.data.gov.au/def/fsdf$1 [R=302,L]
 
         # ISO19160 Ontology - QSA
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
