--- a/conf/environment.data.gov.au.conf
+++ b/conf/environment.data.gov.au.conf
@@ -256,7 +256,28 @@
     # --- output:   http://registry2.it.csiro.au/def/ba/glossary
     #
     # --- comment: Originally it was a proxy on PID service, now a regular redirect
-    RewriteRule ^/def/ba/glossary(/.*)$ http://registry2.it.csiro.au/def/ba/glossary$1 [L,R=302]
+    RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+    RewriteRule ^/def/ba/glossary(.*)$ http://registry2.it.csiro.au/def/ba/glossary$1?_format=ttl  [R=302,L]
+    RewriteRule ^/def/ba/glossary(.*).ttl$ http://registry2.it.csiro.au/def/ba/glossary$1?_format=ttl [L,R=302]
+    RewriteCond %{HTTP:Accept} text/turtle [NC]
+    RewriteRule ^/def/ba/glossary(.*)$ http://registry2.it.csiro.au/def/ba/glossary$1?_format=ttl  [R=302,L]
+    RewriteRule ^/def/ba/glossary(.*)$ http://registry2.it.csiro.au/def/ba/glossary$1 [L,R=302]
+    #
+    ###############################
+
+
+    ###############################
+    #
+    # - def BA Landscape classification
+    #
+    # --- comment: originally handled by all-of-/def/ba proxy
+    #
+    RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+    RewriteRule ^/def/ba/landscape-classification(.*)$ http://registry2.it.csiro.au/def/ba/landscape-classification$1?_format=ttl  [R=302,L]
+    RewriteRule ^/def/ba/landscape-classification(.*).ttl$ http://registry2.it.csiro.au/def/ba/landscape-classification$1?_format=ttl [L,R=302]
+    RewriteCond %{HTTP:Accept} text/turtle [NC]
+    RewriteRule ^/def/ba/landscape-classification(.*)$ http://registry2.it.csiro.au/def/ba/landscape-classification$1?_format=ttl  [R=302,L]
+    RewriteRule ^/def/ba/landscape-classification(.*)$ http://registry2.it.csiro.au/def/ba/landscape-classification$1 [L,R=302]
     #
     ###############################
 
