--- a/conf/environment.data.gov.au.conf
+++ b/conf/environment.data.gov.au.conf
@@ -281,6 +281,36 @@
     #
     ###############################
 
+    ###############################
+    #
+    # - def BA license
+    #
+    # --- comment: originally handled by all-of-/def/ba proxy
+    #
+    RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+    RewriteRule ^/def/ba/license(.*)$ http://registry2.it.csiro.au/def/ba/license$1?_format=ttl  [R=302,L]
+    RewriteRule ^/def/ba/license(.*).ttl$ http://registry2.it.csiro.au/def/ba/license$1?_format=ttl [L,R=302]
+    RewriteCond %{HTTP:Accept} text/turtle [NC]
+    RewriteRule ^/def/ba/license(.*)$ http://registry2.it.csiro.au/def/ba/license$1?_format=ttl  [R=302,L]
+    RewriteRule ^/def/ba/license(.*)$ http://registry2.it.csiro.au/def/ba/license$1 [L,R=302]
+    #
+    ###############################
+
+    ###############################
+    #
+    # - def BA source
+    #
+    # --- comment: originally handled by all-of-/def/ba proxy
+    #
+    RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+    RewriteRule ^/def/ba/source(.*)$ http://registry2.it.csiro.au/def/ba/source$1?_format=ttl  [R=302,L]
+    RewriteRule ^/def/ba/source(.*).ttl$ http://registry2.it.csiro.au/def/ba/source$1?_format=ttl [L,R=302]
+    RewriteCond %{HTTP:Accept} text/turtle [NC]
+    RewriteRule ^/def/ba/source(.*)$ http://registry2.it.csiro.au/def/ba/source$1?_format=ttl  [R=302,L]
+    RewriteRule ^/def/ba/source(.*)$ http://registry2.it.csiro.au/def/ba/source$1 [L,R=302]
+    #
+    ###############################
+
 
     ###############################
     #
