/def/ba/licence

--- a/conf/environment.data.gov.au.conf
+++ b/conf/environment.data.gov.au.conf
@@ -283,16 +283,16 @@
 
     ###############################
     #
-    # - def BA license
+    # - def BA licence
     #
     # --- comment: originally handled by all-of-/def/ba proxy
     #
     RewriteCond %{QUERY_STRING} ^_format=text/turtle$
-    RewriteRule ^/def/ba/license(.*)$ http://registry2.it.csiro.au/def/ba/license$1?_format=ttl  [R=302,L]
-    RewriteRule ^/def/ba/license(.*).ttl$ http://registry2.it.csiro.au/def/ba/license$1?_format=ttl [L,R=302]
+    RewriteRule ^/def/ba/licence(.*)$ http://registry2.it.csiro.au/def/ba/licence$1?_format=ttl  [R=302,L]
+    RewriteRule ^/def/ba/licence(.*).ttl$ http://registry2.it.csiro.au/def/ba/licence$1?_format=ttl [L,R=302]
     RewriteCond %{HTTP:Accept} text/turtle [NC]
-    RewriteRule ^/def/ba/license(.*)$ http://registry2.it.csiro.au/def/ba/license$1?_format=ttl  [R=302,L]
-    RewriteRule ^/def/ba/license(.*)$ http://registry2.it.csiro.au/def/ba/license$1 [L,R=302]
+    RewriteRule ^/def/ba/licence(.*)$ http://registry2.it.csiro.au/def/ba/licence$1?_format=ttl  [R=302,L]
+    RewriteRule ^/def/ba/licence(.*)$ http://registry2.it.csiro.au/def/ba/licence$1 [L,R=302]
     #
     ###############################
 
