--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -25,6 +25,16 @@
         #	Definitional resources
 	#
 
+        # http://linked.data.gov.au/def/gnaf
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/def/gnaf(.*)$ http://gnafld.net/def/gnaf$1.ttl?  [R=302,L]
+
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/gnaf(.*)$ http://gnafld.net/def/gnaf$1.ttl  [R=302,L]
+
+        RewriteRule ^/def/gnaf(.*)$ http://gnafld.net/def/gnaf$1 [R=302,L]
+
+
 	# http://linked.data.gov.au/def/reg-status
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
         RewriteRule ^/def/reg-status(.*)$ http://www.linked.data.gov.au/def/reg-status$1.ttl?  [R=302,L]
@@ -49,12 +59,12 @@
 	#
         # http://linked.data.gov.au/dataset/gnaf
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
-        RewriteRule ^/dataset/gnaf$ http://gnafld.net/index.ttl?  [R=302,L]
+        RewriteRule ^/dataset/gnaf$ http://gnafld.net/?_format=text/turtle  [R=302,L]
 
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/gnaf$ http://gnafld.net/index.ttl  [R=302,L]
+        RewriteRule ^/dataset/gnaf$ http://gnafld.net/_format=text/turtle  [R=302,L]
 
-        RewriteRule ^/dataset/gnaf.ttl$ http://gnafld.net/index.ttl?  [R=302,L]
+        RewriteRule ^/dataset/gnaf.ttl$ http://gnafld.net/_format=text/turtle?  [R=302,L]
 
 
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
