Added redirect for agrif definitional resource

--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -53,6 +53,17 @@
         RewriteRule ^/def/placenames(.*)$ http://www.linked.data.gov.au/def/placenames$1.ttl  [R=302,L]
 
         RewriteRule ^/def/placenames(.*)$ http://www.linked.data.gov.au/def/placenames$1 [R=302,L]
+        
+
+        # http://linked.data.gov.au/def/agrif
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/def/agrif(.*)$ http://reference.data.gov.au/def/ont/agrif$1.ttl? [R=302,L]
+        
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/agrif(.*)$ http://reference.data.gov.au/def/ont/agrif$1.ttl? [R=302,L]
+
+        RewriteRule ^def/agrif(.*)$ http://reference.data.gov.au/def/ont/agrif$1 [R=302,L]
+
 
 	#
         #	Datasets
