Forgot forward slash for agrif

--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -62,7 +62,7 @@
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/agrif(.*)$ http://reference.data.gov.au/def/ont/agrif$1.ttl? [R=302,L]
 
-        RewriteRule ^def/agrif(.*)$ http://reference.data.gov.au/def/ont/agrif$1 [R=302,L]
+        RewriteRule ^/def/agrif(.*)$ http://reference.data.gov.au/def/ont/agrif$1 [R=302,L]
 
 
 	#
