Removed a trailing question mark

--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -75,7 +75,7 @@
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/dataset/gnaf$ http://gnafld.net/?_format=text/turtle  [R=302,L]
 
-        RewriteRule ^/dataset/gnaf.ttl$ http://gnafld.net/?_format=text/turtle?  [R=302,L]
+        RewriteRule ^/dataset/gnaf.ttl$ http://gnafld.net/?_format=text/turtle  [R=302,L]
 
 
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
