--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -19,85 +19,100 @@
 
         #
         #	PIDs
-	#
+	    #
 
         #
         #	Definitional resources
-	#
+	    #
 
         # http://linked.data.gov.au/def/gnaf
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
         RewriteRule ^/def/gnaf(.*)$ http://gnafld.net/def/gnaf$1.ttl?  [R=302,L]
-
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/gnaf(.*)$ http://gnafld.net/def/gnaf$1.ttl  [R=302,L]
-
+        RewriteRule ^/def/gnaf.ttl$ http://gnafld.net/def/gnaf.ttl  [R=302,L]
         RewriteRule ^/def/gnaf(.*)$ http://gnafld.net/def/gnaf$1 [R=302,L]
 
 
-	# http://linked.data.gov.au/def/reg-status
+	    # http://linked.data.gov.au/def/reg-status
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
         RewriteRule ^/def/reg-status(.*)$ http://www.linked.data.gov.au/def/reg-status$1.ttl?  [R=302,L]
-
-	RewriteCond %{HTTP:Accept} text/turtle [NC]
-	RewriteRule ^/def/reg-status(.*)$ http://www.linked.data.gov.au/def/reg-status$1.ttl  [R=302,L]
-
+	    RewriteCond %{HTTP:Accept} text/turtle [NC]
+	    RewriteRule ^/def/reg-status(.*)$ http://www.linked.data.gov.au/def/reg-status$1.ttl  [R=302,L]
+	    RewriteRule ^/def/reg-status.ttl$ http://www.linked.data.gov.au/def/reg-status.ttl  [R=302,L]
         RewriteRule ^/def/reg-status(.*)$ http://www.linked.data.gov.au/def/reg-status$1 [R=302,L]
 
 
         # http://linked.data.gov.au/def/placenames
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
         RewriteRule ^/def/placenames(.*)$ http://www.linked.data.gov.au/def/placenames$1.ttl?  [R=302,L]
-
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/placenames(.*)$ http://www.linked.data.gov.au/def/placenames$1.ttl  [R=302,L]
-
+        RewriteRule ^/def/placenames.ttl$ http://www.linked.data.gov.au/def/placenames.ttl [R=302,L]
         RewriteRule ^/def/placenames(.*)$ http://www.linked.data.gov.au/def/placenames$1 [R=302,L]
         
 
         # http://linked.data.gov.au/def/agrif
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
-        RewriteRule ^/def/agrif(.*)$ http://reference.data.gov.au/def/ont/agrif$1.ttl? [R=302,L]
-        
+        RewriteRule ^/def/agrif(.*)$ http://www.linked.data.gov.au/def/agrif.ttl? [R=302,L]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/agrif(.*)$ http://reference.data.gov.au/def/ont/agrif$1.ttl? [R=302,L]
+        RewriteRule ^/def/agrif(.*)$ http://www.linked.data.gov.au/def/agrif$1.ttl [R=302,L]
+        RewriteRule ^/def/agrif.ttl$ http://www.linked.data.gov.au/def/agrif.ttl [R=302,L]
+        RewriteRule ^/def/agrif(.*)$ http://www.linked.data.gov.au/def/agrif$1 [R=302,L]
 
-        RewriteRule ^/def/agrif(.*)$ http://reference.data.gov.au/def/ont/agrif$1 [R=302,L]
 
         #http://linked.data.gov.au/def/iso19160-1-address
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
-        RewriteRule ^/def/iso19160-1-address(.*)$ http://reference.data.gov.au/def/ont/iso19160-1-address/iso19160-1-address$1.ttl? [R=302,L]
+        RewriteRule ^/def/iso19160-1-address(.*)$ http://www.linked.data.gov.au/def/iso19160-1-address$1.ttl? [R=302,L]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/iso19160-1-address(.*)$ http://reference.data.gov.au/def/ont/iso19160-1-address/iso19160-1-address$1.ttl [R=302,L]
-        RewriteRule ^/def/iso19160-1-address.ttl$ http://reference.data.gov.au/def/ont/iso19160-1-address/iso19160-1-address.ttl [R=302,L]
-        RewriteRule ^/def/iso19160-1-address(.*)$ http://reference.data.gov.au/def/ont/iso19160-1-address$1 [R=302,L]
+        RewriteRule ^/def/iso19160-1-address(.*)$ http://www.linked.data.gov.au/def/iso19160-1-address$1.ttl [R=302,L]
+        RewriteRule ^/def/iso19160-1-address.ttl$ http://www.linked.data.gov.au/def/iso19160-1-address.ttl [R=302,L]
+        RewriteRule ^/def/iso19160-1-address(.*)$ http://www.linked.data.gov.au/def/iso19160-1-address$1 [R=302,L]
 
-	#
+
+        #http://linked.data.gov.au/def/iso19160-1-address-nz-profile
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/def/iso19160-1-address-nz-profile(.*)$ http://www.linked.data.gov.au/def/iso19160-1-address-nz-profile$1.ttl? [R=302,L]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/iso19160-1-address-nz-profile(.*)$ http://www.linked.data.gov.au/def/iso19160-1-address-nz-profile$1.ttl [R=302,L]
+        RewriteRule ^/def/iso19160-1-address-nz-profile.ttl$ http://www.linked.data.gov.au/def/iso19160-1-address-nz-profile.ttl [R=302,L]
+        RewriteRule ^/def/iso19160-1-address-nz-profile(.*)$ http://www.linked.data.gov.au/def/iso19160-1-address-nz-profile$1 [R=302,L]
+
+
+        # http://linked.data.gov.au/def/dataset
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/def/dataset(.*)$ http://www.linked.data.gov.au/def/dataset.ttl? [R=302,L]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/dataset(.*)$ http://www.linked.data.gov.au/def/dataset$1.ttl [R=302,L]
+        RewriteRule ^/def/dataset.ttl$ http://www.linked.data.gov.au/def/dataset.ttl [R=302,L]
+        RewriteRule ^/def/dataset(.*)$ http://www.linked.data.gov.au/def/dataset$1 [R=302,L]
+
+
+        # http://linked.data.gov.au/def/fsdf
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/def/fsdf(.*)$ http://www.linked.data.gov.au/def/fsdf.ttl? [R=302,L]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/fsdf(.*)$ http://www.linked.data.gov.au/def/fsdf$1.ttl [R=302,L]
+        RewriteRule ^/def/fsdf.ttl$ http://www.linked.data.gov.au/def/fsdf.ttl [R=302,L]
+        RewriteRule ^/def/fsdf(.*)$ http://www.linked.data.gov.au/def/fsdf$1 [R=302,L]
+
+	    #
         #	Datasets
-	#
+	    #
         # http://linked.data.gov.au/dataset/gnaf
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
         RewriteRule ^/dataset/gnaf$ http://gnafld.net/?_format=text/turtle  [R=302,L]
-
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/dataset/gnaf$ http://gnafld.net/?_format=text/turtle  [R=302,L]
-
         RewriteRule ^/dataset/gnaf.ttl$ http://gnafld.net/?_format=text/turtle  [R=302,L]
-
-
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
         RewriteRule ^/dataset/gnaf(.*)$ $1.ttl?
-
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/dataset/gnaf(.*)$ $1.ttl
-
         RewriteRule ^/dataset/gnaf(.*).ttl$ http://gnafld.net$1.ttl? [R=302,L]
-
         RewriteRule ^/(.*)/.ttl$ http://gnafld.net/$1/index.ttl [R=302,L]
-	RewriteRule ^/(.*).ttl$ http://gnafld.net/$1.ttl [R=302,L]
-
+	    RewriteRule ^/(.*).ttl$ http://gnafld.net/$1.ttl [R=302,L]
         RewriteRule ^/dataset/gnaf(.*)$ http://gnafld.net$1 [R=302,L]
-
 	
 
 
