pointing all legacy reference.* URIs to linked.* equivalents

--- a/conf/reference.data.gov.au.conf
+++ b/conf/reference.data.gov.au.conf
@@ -21,9 +21,39 @@
 
         RewriteEngine on
 
-        #
-        # All handling of reference.data.gov.au done by AGLDWG web server which contains static copies of all
-        # definitional assests made using it at /var/www/html/reference.data.gov.au/.
-        #
-        RedirectMatch ^(.*)$ http://www.linked.data.gov.au/reference.data.gov.au$1
+
+        # http://reference.data.gov.au/def/ont/agrif
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/def/ont/agrif(.*)$ http://www.linked.data.gov.au/def/agrif.ttl? [R=302,L]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/ont/agrif(.*)$ http://www.linked.data.gov.au/def/agrif$1.ttl [R=302,L]
+        RewriteRule ^/def/ont/agrif.ttl$ http://www.linked.data.gov.au/def/agrif.ttl [R=302,L]
+        RewriteRule ^/def/ont/agrif(.*)$ http://www.linked.data.gov.au/def/agrif$1 [R=302,L]
+
+
+        # http://reference.data.gov.au/def/ont/iso19160-1-address
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/def/ont/iso19160-1-address(.*)$ http://www.linked.data.gov.au/def/iso19160-1-address$1.ttl? [R=302,L]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/ont/iso19160-1-address(.*)$ http://www.linked.data.gov.au/def/iso19160-1-address$1.ttl [R=302,L]
+        RewriteRule ^/def/ont/iso19160-1-address.ttl$ http://www.linked.data.gov.au/def/iso19160-1-address.ttl [R=302,L]
+        RewriteRule ^/def/ont/iso19160-1-address(.*)$ http://www.linked.data.gov.au/def/iso19160-1-address$1 [R=302,L]
+
+
+        # http://reference.data.gov.au/def/ont/iso19160-1-address-nz-profile
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/def/ont/iso19160-1-address-nz-profile(.*)$ http://www.linked.data.gov.au/def/iso19160-1-address-nz-profile$1.ttl? [R=302,L]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/ont/iso19160-1-address-nz-profile(.*)$ http://www.linked.data.gov.au/def/iso19160-1-address-nz-profile$1.ttl [R=302,L]
+        RewriteRule ^/def/ont/iso19160-1-address-nz-profile.ttl$ http://www.linked.data.gov.au/def/iso19160-1-address-nz-profile.ttl [R=302,L]
+        RewriteRule ^/def/ont/iso19160-1-address-nz-profile(.*)$ http://www.linked.data.gov.au/def/iso19160-1-address-nz-profile$1 [R=302,L]
+
+
+        # http://reference.data.gov.au/def/ont/dataset
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/def/ont/dataset(.*)$ http://www.linked.data.gov.au/def/dataset.ttl? [R=302,L]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/ont/dataset(.*)$ http://www.linked.data.gov.au/def/dataset$1.ttl [R=302,L]
+        RewriteRule ^/def/ont/dataset.ttl$ http://www.linked.data.gov.au/def/dataset.ttl [R=302,L]
+        RewriteRule ^/def/ont/dataset(.*)$ http://www.linked.data.gov.au/def/dataset$1 [R=302,L]
 </VirtualHost>
