data-policies, geofabric

--- a/conf/test.linked.data.gov.au.conf
+++ b/conf/test.linked.data.gov.au.conf
@@ -9,6 +9,16 @@
         ServerName test.linked.data.gov.au
 
         RewriteEngine  on
+
+
+        # http://test.linked.data.gov.au/def/CSIRO-ePub-DCAP
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/def/CSIRO-ePub-DCAP(.*)$ /def/CSIRO-ePub-DCAP$1.ttl?  [R=302,L]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+	RewriteRule ^/def/CSIRO-ePub-DCAP(.*)$ /def/CSIRO-ePub-DCAP$1.ttl?  [R=302,L]
+        RewriteRule ^/def/CSIRO-ePub-DCAP(.*)$ /def/CSIRO-ePub-DCAP$1 [R=302,L]
+
+
         RewriteRule   "/board/(.+)"  "http://test.linked.data.gov.au/dataset/auorg/object?uri=http://test.linked.data.gov.au/board/$1"  [R=303,L,QSA]
         RewriteRule   "/org/(.+)"  "http://test.linked.data.gov.au/dataset/auorg/object?uri=http://test.linked.data.gov.au/org/$1"  [R=303,L,QSA]
         RewriteRule   "/person/(.+)"  "http://test.linked.data.gov.au/dataset/auorg/object?uri=http://test.linked.data.gov.au/person/$1"  [R=303,L,QSA]
