--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -19,11 +19,11 @@
 
         #
         #	PIDs
-	    #
+        #
 
         #
         #	Definitional resources
-	    #
+        #
 
         # http://linked.data.gov.au/def/gnaf
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
@@ -34,12 +34,12 @@
         RewriteRule ^/def/gnaf(.*)$ http://gnafld.net/def/gnaf$1 [R=302,L]
 
 
-	    # http://linked.data.gov.au/def/reg-status
+        # http://linked.data.gov.au/def/reg-status
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
         RewriteRule ^/def/reg-status(.*)$ http://www.linked.data.gov.au/def/reg-status$1.ttl?  [R=302,L]
-	    RewriteCond %{HTTP:Accept} text/turtle [NC]
-	    RewriteRule ^/def/reg-status(.*)$ http://www.linked.data.gov.au/def/reg-status$1.ttl  [R=302,L]
-	    RewriteRule ^/def/reg-status.ttl$ http://www.linked.data.gov.au/def/reg-status.ttl  [R=302,L]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/reg-status(.*)$ http://www.linked.data.gov.au/def/reg-status$1.ttl  [R=302,L]
+        RewriteRule ^/def/reg-status.ttl$ http://www.linked.data.gov.au/def/reg-status.ttl  [R=302,L]
         RewriteRule ^/def/reg-status(.*)$ http://www.linked.data.gov.au/def/reg-status$1 [R=302,L]
 
 
@@ -96,25 +96,80 @@
         RewriteRule ^/def/fsdf.ttl$ http://www.linked.data.gov.au/def/fsdf.ttl [R=302,L]
         RewriteRule ^/def/fsdf(.*)$ http://www.linked.data.gov.au/def/fsdf$1 [R=302,L]
 
-	    #
+        #
         #	Datasets
-	    #
+        #
 
         # http://linked.data.gov.au/dataset/gnaf
+	# Dataset
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
-        RewriteRule ^/dataset/gnaf$ http://gnafld.net/?_format=text/turtle  [R=302,L]
+        RewriteRule ^/dataset/gnaf$			http://gnafld.net/index.ttl?  [R=302,L]
+        RewriteRule ^/dataset/gnaf.ttl$			http://gnafld.net/index.ttl  [R=302,L]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/gnaf$ http://gnafld.net/?_format=text/turtle  [R=302,L]
-        RewriteRule ^/dataset/gnaf.ttl$ http://gnafld.net/?_format=text/turtle  [R=302,L]
+        RewriteRule ^/dataset/gnaf$                     http://gnafld.net/index.ttl  [R=302,L]
+        RewriteRule ^/dataset/gnaf$                     http://gnafld.net  [R=302,L]
+	# Top-level Registers
+	RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/dataset/gnaf/(.*)/$		http://gnafld.net/$1/index.ttl? [R=302,L]
+        RewriteRule ^/dataset/gnaf/(.*)/.ttl$		http://gnafld.net/$1/index.ttl [R=302,L]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/gnaf/(.*)/$		http://gnafld.net/$1/index.ttl [R=302,L]
+	RewriteRule ^/dataset/gnaf/(.*)/$		http://gnafld.net/$1/ [R=302,L]
+        # sub-dataset objects
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
-        RewriteRule ^/dataset/gnaf(.*)$ $1.ttl?
+        RewriteRule ^/dataset/gnaf/(.*)$		http://gnafld.net/$1.ttl? [R=302,L]
+        RewriteRule ^/dataset/gnaf/(.*).ttl$		http://gnafld.net/$1.ttl [R=302,L]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/gnaf(.*)$ $1.ttl
-        RewriteRule ^/dataset/gnaf(.*).ttl$ http://gnafld.net$1.ttl? [R=302,L]
-        RewriteRule ^/(.*)/.ttl$ http://gnafld.net/$1/index.ttl [R=302,L]
-	    RewriteRule ^/(.*).ttl$ http://gnafld.net/$1.ttl [R=302,L]
-        RewriteRule ^/dataset/gnaf(.*)$ http://gnafld.net$1 [R=302,L]
+        RewriteRule ^/dataset/gnaf/(.*)$		http://gnafld.net/$1.ttl [R=302,L]
+        RewriteRule ^/dataset/gnaf/(.*)$		http://gnafld.net/$1 [R=302,L]
 
+
+        # http://linked.data.gov.au/dataset/geofabric
+        # Dataset
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/dataset/geofabric$                     http://geofabricld.net/index.ttl?  [R=302,L]
+        RewriteRule ^/dataset/geofabric.ttl$                 http://geofabricld.net/index.ttl  [R=302,L]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/geofabric$                     http://geofabricld.net/index.ttl  [R=302,L]
+        RewriteRule ^/dataset/geofabric$                     http://geofabricld.net  [R=302,L]
+        # Top-level Registers
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/dataset/geofabric/(.*)/$               http://geofabricld.net/$1/index.ttl? [R=302,L]
+        RewriteRule ^/dataset/geofabric/(.*)/.ttl$           http://geofabricld.net/$1/index.ttl [R=302,L]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/geofabric/(.*)/$               http://geofabricld.net/$1/index.ttl [R=302,L]
+        RewriteRule ^/dataset/geofabric/(.*)/$               http://geofabricld.net/$1/ [R=302,L]
+        # sub-dataset objects
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/dataset/geofabric/(.*)$                http://geofabricld.net/$1.ttl? [R=302,L]
+        RewriteRule ^/dataset/geofabric/(.*).ttl$            http://geofabricld.net/$1.ttl [R=302,L]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/geofabric/(.*)$                http://geofabricld.net/$1.ttl [R=302,L]
+        RewriteRule ^/dataset/geofabric/(.*)$                http://geofabricld.net/$1 [R=302,L]
+
+
+        # http://linked.data.gov.au/dataset/data-policies
+        # Dataset
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/dataset/data-policies$                     http://13.236.122.60/licences/index.ttl?  [R=302,L]
+        RewriteRule ^/dataset/data-policies.ttl$                 http://13.236.122.60/licences/index.ttl  [R=302,L]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/data-policies$                     http://13.236.122.60/licences/index.ttl  [R=302,L]
+        RewriteRule ^/dataset/data-policies$                     http://13.236.122.60/licences/  [R=302,L]
+        # Top-level Registers
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/dataset/data-policies/(.*)/$               http://13.236.122.60/licences/$1/index.ttl? [R=302,L]
+        RewriteRule ^/dataset/data-policies/(.*)/.ttl$           http://13.236.122.60/licences/$1/index.ttl [R=302,L]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/data-policies/(.*)/$               http://13.236.122.60/licences/$1/index.ttl [R=302,L]
+        RewriteRule ^/dataset/data-policies/(.*)/$               http://13.236.122.60/licences/$1/ [R=302,L]
+        # sub-dataset objects
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/dataset/data-policies/(.*)$                http://13.236.122.60/licences/$1.ttl? [R=302,L]
+        RewriteRule ^/dataset/data-policies/(.*).ttl$            http://13.236.122.60/licences/$1.ttl [R=302,L]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/data-policies/(.*)$                http://13.236.122.60/licences/$1.ttl [R=302,L]
+        RewriteRule ^/dataset/data-policies/(.*)$                http://13.236.122.60/licences/$1 [R=302,L]
 
         #
         #       AGLDWG website - legacy link redirector
