--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -61,6 +61,15 @@
         RewriteRule ^/def/agrif(.*)$ http://www.linked.data.gov.au/def/agrif$1 [R=302,L]
 
 
+        # http://linked.data.gov.au/def/asgs
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/def/asgs(.*)$ http://www.linked.data.gov.au/def/asgs.ttl? [R=302,L]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/asgs(.*)$ http://www.linked.data.gov.au/def/asgs$1.ttl [R=302,L]
+        RewriteRule ^/def/asgs.ttl$ http://www.linked.data.gov.au/def/asgs.ttl [R=302,L]
+        RewriteRule ^/def/asgs(.*)$ http://www.linked.data.gov.au/def/asgs$1 [R=302,L]
+
+
         # http://linked.data.gov.au/def/iso19160-1-address
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
         RewriteRule ^/def/iso19160-1-address(.*)$ http://www.linked.data.gov.au/def/iso19160-1-address$1.ttl? [R=302,L]
