--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -180,6 +180,29 @@
         RewriteRule ^/dataset/data-policies/(.*)$            http://13.236.122.60/licences/$1.ttl [R=302,L]
         RewriteRule ^/dataset/data-policies/(.*)$            http://13.236.122.60/licences/$1 [R=302,L]
 
+        # http://linked.data.gov.au/dataset/asgs2016
+        # Dataset
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/dataset/asgs2016$                 http://13.236.122.60/asgs/index.ttl?  [R=302,L]
+        RewriteRule ^/dataset/asgs2016.ttl$             http://13.236.122.60/asgs/index.ttl  [R=302,L]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/asgs2016$                 http://13.236.122.60/asgs/index.ttl  [R=302,L]
+        RewriteRule ^/dataset/asgs2016$                 http://13.236.122.60/asgs/  [R=302,L]
+        # Top-level Registers
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/dataset/asgs2016/(.*)/$           http://13.236.122.60/asgs/$1/index.ttl? [R=302,L]
+        RewriteRule ^/dataset/asgs2016/(.*)/.ttl$       http://13.236.122.60/asgs/$1/index.ttl [R=302,L]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/asgs2016/(.*)/$           http://13.236.122.60/asgs/$1/index.ttl [R=302,L]
+        RewriteRule ^/dataset/asgs2016/(.*)/$           http://13.236.122.60/asgs/$1/ [R=302,L]
+        # sub-dataset objects
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/dataset/asgs2016/(.*)$            http://13.236.122.60/asgs/$1.ttl? [R=302,L]
+        RewriteRule ^/dataset/asgs2016/(.*).ttl$        http://13.236.122.60/asgs/$1.ttl [R=302,L]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/asgs2016/(.*)$            http://13.236.122.60/asgs/$1.ttl [R=302,L]
+        RewriteRule ^/dataset/asgs2016/(.*)$            http://13.236.122.60/asgs/$1 [R=302,L]
+
         #
         #       AGLDWG website - legacy link redirector
         #
