gnaf-2016-05 basic link

--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -109,6 +109,10 @@
         #	Datasets
         #
 
+        # http://linked.data.gov.au/dataset/gnaf-2016-05 
+	# Dataset
+        RewriteRule ^/dataset/gnaf-2016-05$                 http://gnafld.net/2016-05  [R=302,L]
+
         # http://linked.data.gov.au/dataset/gnaf
 	    # Dataset
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
