--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -105,6 +105,16 @@
         RewriteRule ^/def/fsdf.ttl$ http://www.linked.data.gov.au/def/fsdf.ttl [R=302,L]
         RewriteRule ^/def/fsdf(.*)$ http://www.linked.data.gov.au/def/fsdf$1 [R=302,L]
 
+
+        # http://linked.data.gov.au/def/loci
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/def/loci(.*)$ http://www.linked.data.gov.au/def/loci.ttl? [R=302,L]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/loci(.*)$ http://www.linked.data.gov.au/def/loci$1.ttl [R=302,L]
+        RewriteRule ^/def/loci.ttl$ http://www.linked.data.gov.au/def/loci.ttl [R=302,L]
+        RewriteRule ^/def/loci(.*)$ http://www.linked.data.gov.au/def/loci$1 [R=302,L]
+
+
         #
         #	Datasets
         #
