--- a/conf/environment.data.gov.au.conf
+++ b/conf/environment.data.gov.au.conf
@@ -1030,4 +1030,10 @@
     #
     ###############################
 
+	# legacy defs properties from eReefs
+	#
+	RewriteRule ^/def/property(.*) http://registry2.it.csiro.au/def/property$1
+	RewriteRule ^/def/feature(.*) http://registry2.it.csiro.au/def/feature$1
+	RewriteRule ^/def/object(.*) http://registry2.it.csiro.au/def/object$1
+	
 </VirtualHost>
