trivial pattern fix

--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -66,7 +66,7 @@
         RewriteRule ^/def/asgs(.*)$ http://www.linked.data.gov.au/def/asgs.ttl? [R=302,L]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/asgs(.*)$ http://www.linked.data.gov.au/def/asgs$1.ttl [R=302,L]
-        RewriteRule ^/def/asgs(.*).ttl$ http://www.linked.data.gov.au/def/asgs$1ttl [R=302,L]
+        RewriteRule ^/def/asgs(.*).ttl$ http://www.linked.data.gov.au/def/asgs$1.ttl [R=302,L]
         RewriteRule ^/def/asgs(.*)$ http://www.linked.data.gov.au/def/asgs$1 [R=302,L]
 
 
@@ -102,7 +102,7 @@
         RewriteRule ^/def/fsdf(.*)$ http://www.linked.data.gov.au/def/fsdf.ttl? [R=302,L]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/fsdf(.*)$ http://www.linked.data.gov.au/def/fsdf$1.ttl [R=302,L]
-        RewriteRule ^/def/fsdf(.*).ttl$ http://www.linked.data.gov.au/def/fsdf$1ttl [R=302,L]
+        RewriteRule ^/def/fsdf(.*).ttl$ http://www.linked.data.gov.au/def/fsdf$1.ttl [R=302,L]
         RewriteRule ^/def/fsdf(.*)$ http://www.linked.data.gov.au/def/fsdf$1 [R=302,L]
 
 
