--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -254,16 +254,22 @@
         RewriteRule ^/dataset/asgs2016/(.*)$                http://asgsld.net/$1?_format=text/turtle [R=302,L]
         RewriteRule ^/dataset/asgs2016/(.*)$                http://asgsld.net/$1 [R=302,L]
 
-		# Linksets
 
-		# Addresses / Catchments
-		RewriteRule ^/linkset/bhafqv$                		https://github.com/CSIRO-enviro-informatics/addressescatchments-linkset [R=302,L]
+        # http://linked.data.gov.au/dataset/energy
+        # Datasets
+        RewriteRule ^/dataset/energy/(.*)$                  https://eudm.csiro.au/assets/$1 [R=302,L]
+
+
+	# Linksets
+
+	# Addresses / Catchments
+	RewriteRule ^/linkset/bhafqv$                      https://github.com/CSIRO-enviro-informatics/addressescatchments-linkset [R=302,L]
 
         #
         #       AGLDWG website - legacy link redirector
         #
 
-	    #
+        #
         #       All new www.linked.data.gov.au patterns must be added to www.linked.data.gov.au.conf, not here
         #
         RewriteRule   /([a-z]+)(.html)?  http://www.linked.data.gov.au/$1  [R=302,L]
