--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -257,6 +257,7 @@
 
         # http://linked.data.gov.au/dataset/energy
         # Datasets
+        RewriteRule ^/dataset/energy/$                      https://eudm.csiro.au/assets/ [R=302,L]
         RewriteRule ^/dataset/energy/(.*)$                  https://eudm.csiro.au/assets/$1 [R=302,L]
 
 
