--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -257,8 +257,8 @@
 
         # http://linked.data.gov.au/dataset/energy
         # Datasets
-        RewriteRule ^/dataset/energy/$                      https://eudm.csiro.au/assets/ [R=302,L]
-        RewriteRule ^/dataset/energy/(.*)$                  https://eudm.csiro.au/assets/$1 [R=302,L]
+        RewriteRule ^/dataset/energy/$                      https://near.csiro.au/assets/ [R=302,L]
+        RewriteRule ^/dataset/energy/(.*)$                  https://near.csiro.au/assets/$1 [R=302,L]
 
 
 	# Linksets
