new catalogue VM

--- a/conf/catalogue.linked.data.gov.au.conf
+++ b/conf/catalogue.linked.data.gov.au.conf
@@ -8,6 +8,7 @@
         ServerName catalogue.linked.data.gov.au
 
         RewriteEngine  on
-        ProxyPass "/"  "http://13.237.151.110/"
-        ProxyPassReverse "/"  http://13.237.151.110/"
+	ProxyPreserveHost On
+        ProxyPass "/"  "http://203.101.224.217/"
+        ProxyPassReverse "/"  "http://203.101.224.217/"
 </VirtualHost>
