--- a/conf/reference.data.gov.au.conf
+++ b/conf/reference.data.gov.au.conf
@@ -56,4 +56,7 @@
         RewriteRule ^/def/ont/dataset(.*)$ http://www.linked.data.gov.au/def/dataset$1.ttl [R=302,L]
         RewriteRule ^/def/ont/dataset.ttl$ http://www.linked.data.gov.au/def/dataset.ttl [R=302,L]
         RewriteRule ^/def/ont/dataset(.*)$ http://www.linked.data.gov.au/def/dataset$1 [R=302,L]
+
+	RewriteRule ^/agrifdemo$ http://www.linked.data.gov.au/reference.data.gov.au/agrifdemo/
+
 </VirtualHost>
