--- a/conf/test.linked.data.gov.au.conf
+++ b/conf/test.linked.data.gov.au.conf
@@ -11,6 +11,15 @@
         RewriteEngine  on
 
 
+
+        #
+        #       Top-level registers
+        #
+        # http://linked.data.gov.au/data-licence/
+        RewriteRule ^/licence/(.*)$ https://licences.csiro.au/licence/?uri=http://test.linked.data.gov.au/licence/$1 [R=302,L]
+        RewriteRule ^/license/(.*)$ https://licences.csiro.au/licence/?uri=http://test.linked.data.gov.au/licence/$1 [R=302,L]
+
+
         # http://test.linked.data.gov.au/def/CSIRO-ePub-DCAP
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
         RewriteRule ^/def/CSIRO-ePub-DCAP(.*)$ /def/CSIRO-ePub-DCAP$1.ttl?  [R=302,L]
@@ -40,15 +49,6 @@
 
         ProxyPass "/dataset/auorg"  "http://13.236.122.60/dataset/auorg"
         ProxyPassReverse "/dataset/auorg"  "http://13.236.122.60/dataset/auorg"
-
-        RewriteRule   "/dataset/odrl-policies/([a-zA-Z]+)/(.+)"  "http://test.linked.data.gov.au/dataset/odrl-policies/object?uri=http://test.linked.data.gov.au/dataset/odrl-policies/$1/$2"  [R=303,L,QSA]
-        RewriteRule   "/license/(.+)"  "http://test.linked.data.gov.au/dataset/odrl-policies/object?uri=http://test.linked.data.gov.au/license/$1"  [R=303,L,QSA]
-
-        ProxyPass         "/license/"  "http://13.236.122.60/dataset/odrl-policies/license/"
-        ProxyPassReverse  "/license/"  "http://13.236.122.60/dataset/odrl-policies/license/"
-
-        ProxyPass "/dataset/odrl-policies"  "http://13.236.122.60/dataset/odrl-policies"
-        ProxyPassReverse "/dataset/odrl-policies"  "http://13.236.122.60/dataset/odrl-policies"
 
         ProxyPass         "/def/"  "http://203.101.224.166/def/"
         ProxyPassReverse  "/def/"  "http://203.101.224.166/def/"
