--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -198,6 +198,15 @@
         RewriteRule ^/def/asgs(.*)$ http://www.linked.data.gov.au/def/asgs$1 [R=302,L]
 
 
+        # http://linked.data.gov.au/def/borehole
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/def/borehole(.*)$ http://www.linked.data.gov.au/def/borehole.ttl? [R=302,L]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/borehole(.*)$ http://www.linked.data.gov.au/def/borehole$1.ttl [R=302,L]
+        RewriteRule ^/def/borehole(.*).ttl$ http://www.linked.data.gov.au/def/borehole$1.ttl [R=302,L]
+        RewriteRule ^/def/borehole(.*)$ http://www.linked.data.gov.au/def/borehole$1 [R=302,L]
+        
+
         # http://linked.data.gov.au/def/dataset
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
         RewriteRule ^/def/dataset(.*)$ http://www.linked.data.gov.au/def/dataset.ttl? [R=302,L]
