borehole component slash to hash

--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -199,22 +199,25 @@
 
 
         # http://linked.data.gov.au/def/borehole
-        # the [^-] is to prevent a match with ^/def/borehole-inclination and similar
+	# all requests for RDF (tutle) just go to the single RDF file
+	# requests for .../borehole/... go to .../borehole#...
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
-        RewriteRule ^/def/borehole([^-].*)$ http://www.linked.data.gov.au/def/borehole.ttl? [R=302,L]
+        RewriteRule ^/def/borehole(.*)$ http://www.linked.data.gov.au/def/borehole.ttl? [R=302,L]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/borehole([^-].*)$ http://www.linked.data.gov.au/def/borehole$1.ttl [R=302,L]
-        RewriteRule ^/def/borehole([^-].*).ttl$ http://www.linked.data.gov.au/def/borehole$1.ttl [R=302,L]
-        RewriteRule ^/def/borehole([^-].*)$ http://www.linked.data.gov.au/def/borehole$1 [R=302,L]
-        
+        RewriteRule ^/def/borehole(.*)$ http://www.linked.data.gov.au/def/borehole.ttl [R=302,L]
+        RewriteRule ^/def/borehole(.*).ttl$ http://www.linked.data.gov.au/def/borehole.ttl [R=302,L]
+        RewriteRule ^/def/borehole$ http://www.linked.data.gov.au/def/borehole [R=302,L]
+        RewriteRule ^/def/borehole/(.*)$ http://www.linked.data.gov.au/def/borehole/#$1 [R=302,L,NE]
 
         # http://linked.data.gov.au/def/dataset
+	# all requests for RDF (turtle) just go to the whole borehole.ttl doc
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
         RewriteRule ^/def/dataset(.*)$ http://www.linked.data.gov.au/def/dataset.ttl? [R=302,L]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/dataset(.*)$ http://www.linked.data.gov.au/def/dataset$1.ttl [R=302,L]
-        RewriteRule ^/def/dataset(.*).ttl$ http://www.linked.data.gov.au/def/dataset$1.ttl [R=302,L]
-        RewriteRule ^/def/dataset(.*)$ http://www.linked.data.gov.au/def/dataset$1 [R=302,L]
+        RewriteRule ^/def/dataset(.*)$ http://www.linked.data.gov.au/def/dataset.ttl [R=302,L]
+        RewriteRule ^/def/dataset(.*).ttl$ http://www.linked.data.gov.au/def/dataset.ttl [R=302,L]
+        RewriteRule ^/def/dataset$ http://www.linked.data.gov.au/def/dataset$1 [R=302,L]
+        RewriteRule ^/def/dataset/(.*)$ http://www.linked.data.gov.au/def/dataset#$1 [R=302,L]
 
 
         # http://linked.data.gov.au/def/eudm
@@ -391,6 +394,15 @@
 	# http://linked.data.gov.au/def/spatial-region
 	RewriteRule ^/def/spatial-region/?$ http://vocabs.gsq.digital/vocabulary/spatial-region [R=302,L]
 	RewriteRule ^/def/spatial-region(.*)$ http://vocabs.gsq.digital/object?vocab_id=spatial-region&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
+
+	# Multiple Vocabs: TERN's CorVeg
+	# http://linked.data.gov.au/def/corveg-cv
+	RewriteRule ^/def/corveg-cv$ http://vocabs.tern.org.au/corveg [R=302,L]
+
+	RewriteCond %{HTTP:Accept} text/turtle [NC]
+	RewriteRule ^/def/corveg-cv(.*) http://vocabs.tern.org.au/corveg/id/http://linked.data.gov.au/def/corveg-cv$1?_format=text/turtle [R=302,L]	
+	RewriteRule ^/def/corveg-cv(.*) http://vocabs.tern.org.au/corveg/id/http://linked.data.gov.au/def/corveg-cv$1 [R=302,L]
+
 
 	# Linksets
 
