added URI to acces AGRIF demo

--- a/conf/www.linked.data.gov.au.conf
+++ b/conf/www.linked.data.gov.au.conf
@@ -9,6 +9,9 @@
 
         RewriteEngine  on
 
+        ProxyPass "/agrif-demo"  "http://203.101.224.166/agrif-demo"
+        ProxyPassReverse "/agrif-demo"  "http://203.101.224.166/agrif-demo"
+
         # supports redirects from the persistent domain with nice URIs
         ProxyPass "/def/"  "http://203.101.224.166/def/"
         ProxyPassReverse "/def/"  "http://203.101.224.166/def/"
