3x GSQ vocabs, better PN Ont RDF links

--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -276,11 +276,13 @@
 
         # http://linked.data.gov.au/def/placenames
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
-        RewriteRule ^/def/placenames(.*)$ http://www.linked.data.gov.au/def/placenames$1.ttl?  [R=302,L]
+        RewriteRule ^/def/placenames(.*)$ http://www.linked.data.gov.au/def/placenames/placenames.ttl?  [R=302,L]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/placenames(.*)$ http://www.linked.data.gov.au/def/placenames$1.ttl  [R=302,L]
-        RewriteRule ^/def/placenames(.*).ttl$ http://www.linked.data.gov.au/def/placenames$1.ttl [R=302,L]
-        RewriteRule ^/def/placenames(.*)$ http://www.linked.data.gov.au/def/placenames$1 [R=302,L]
+        RewriteRule ^/def/placenames(.*)$ http://www.linked.data.gov.au/def/placenames/placenames.ttl [R=302,L]
+	RewriteRule ^/def/placenames.ttl$ http://www.linked.data.gov.au/def/placenames/placenames.ttl [R=302,L]
+	RewriteRule ^/def/placenames/?$ http://www.linked.data.gov.au/def/placenames [R=302,L]	
+	RewriteMap tolower int:tolower
+        RewriteRule ^/def/placenames/(.*)$ http://www.linked.data.gov.au/def/placenames\#${tolower:$1} [R=302,L,NE]
 
 
         #
@@ -340,6 +342,11 @@
 	RewriteRule ^/def/data-access/?$ http://vocabs.gsq.digital/vocabulary/data-access [R=302,L]
 	RewriteRule ^/def/data-access(.*)$ http://vocabs.gsq.digital/object?vocab_id=data-access&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
 
+        # Vocab: Earth Science Data Category
+        # http://linked.data.gov.au/def/earth-science-data-category
+        RewriteRule ^/def/earth-science-data-category/?$ http://vocabs.gsq.digital/vocabulary/earth-science-data-category [R=302,L]
+        RewriteRule ^/def/earth-science-data-category(.*)$ http://vocabs.gsq.digital/object?vocab_id=earth-science-data-category&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
+
 	# Vocab: Geochemistry Sampling Method
 	# http://linked.data.gov.au/def/geochemistry-sampling-method
 	RewriteRule ^/def/geochemistry-sampling-method/?$ http://vocabs.gsq.digital/vocabulary/geochemistry-sampling-method [R=302,L]
@@ -350,10 +357,20 @@
 	RewriteRule ^/def/geophysical-survey/?$ http://vocabs.gsq.digital/vocabulary/geophysical-survey [R=302,L]
 	RewriteRule ^/def/geophysical-survey(.*)$ http://vocabs.gsq.digital/object?vocab_id=geophysical-survey&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
 
+        # Vocab: Geoscience Feature of Interest
+        # http://linked.data.gov.au/def/geoscience-foi
+        RewriteRule ^/def/geoscience-foi/?$ http://vocabs.gsq.digital/vocabulary/geoscience-feature-of-interest [R=302,L]
+        RewriteRule ^/def/geoscience-foi(.*)$ http://vocabs.gsq.digital/object?vocab_id=geoscience-feature-of-interest&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
+
 	# Vocab: GSQ Commodity Code
 	# http://linked.data.gov.au/def/gsq-commodity-code
 	RewriteRule ^/def/gsq-commodity-code/?$ http://vocabs.gsq.digital/vocabulary/gsq-commodity-code [R=302,L]
 	RewriteRule ^/def/gsq-commodity-code(.*)$ http://vocabs.gsq.digital/object?vocab_id=gsq-commodity-code&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
+
+        # Vocab: GSQ Dataset Theme
+        # http://linked.data.gov.au/def/gsq-dataset-theme
+        RewriteRule ^/def/gsq-dataset-theme/?$ http://vocabs.gsq.digital/vocabulary/gsq-dataset-theme [R=302,L]
+        RewriteRule ^/def/gsq-dataset-theme(.*)$ http://vocabs.gsq.digital/object?vocab_id=gsq-dataset-theme&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
 
 	# Vocab: GSQ Lithology
 	# http://linked.data.gov.au/def/gsq-lithology
