gba update endoint, added plot

--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -285,27 +285,35 @@
         RewriteRule ^/def/placenames/(.*)$ http://www.linked.data.gov.au/def/placenames\#${tolower:$1} [R=302,L,NE]
 
 
+        # http://linked.data.gov.au/def/plot
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/def/plot(.*)$ http://www.linked.data.gov.au/def/plot.ttl? [R=302,L]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/plot(.*)$ http://www.linked.data.gov.au/def/plot$1.ttl [R=302,L]
+        RewriteRule ^/def/plot(.*).ttl$ http://www.linked.data.gov.au/def/plot$1.ttl [R=302,L]
+        RewriteRule ^/def/plot(.*)$ http://www.linked.data.gov.au/def/plot$1 [R=302,L]
+
         #
         #	Vocabularies
         #
         
         # http://linked.data.gov.au/def/gba
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
-        RewriteRule ^/def/gba(.*)$ http://registry2.it.csiro.au/def/gba$1?_format=ttl [R=302,L]
+        RewriteRule ^/def/gba(.*)$ http://registry.it.csiro.au/def/gba$1?_format=ttl [R=302,L]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/gba(.*)$ http://registry2.it.csiro.au/def/gba$1?_format=ttl [R=302,L]
-        RewriteRule ^/def/gba(.*).ttl$ http://registry2.it.csiro.au/def/gba$1?_format=ttl [R=302,L]
+        RewriteRule ^/def/gba(.*)$ http://registry.it.csiro.au/def/gba$1?_format=ttl [R=302,L]
+        RewriteRule ^/def/gba(.*).ttl$ http://registry.it.csiro.au/def/gba$1?_format=ttl [R=302,L]
         RewriteCond %{QUERY_STRING} ^_format=application/ld+json$
-        RewriteRule ^/def/gba(.*)$ http://registry2.it.csiro.au/def/gba$1?_format=jsonld [R=302,L]
+        RewriteRule ^/def/gba(.*)$ http://registry.it.csiro.au/def/gba$1?_format=jsonld [R=302,L]
         RewriteCond %{HTTP:Accept} application/ld+json [NC]
-        RewriteRule ^/def/gba(.*)$ http://registry2.it.csiro.au/def/gba$1?_format=jsonld [R=302,L]
-        RewriteRule ^/def/gba(.*).jsonld$ http://registry2.it.csiro.au/def/gba$1?_format=jsonld [R=302,L]
+        RewriteRule ^/def/gba(.*)$ http://registry.it.csiro.au/def/gba$1?_format=jsonld [R=302,L]
+        RewriteRule ^/def/gba(.*).jsonld$ http://registry.it.csiro.au/def/gba$1?_format=jsonld [R=302,L]
         RewriteCond %{QUERY_STRING} ^_format=application/rdf+xml$
-        RewriteRule ^/def/gba(.*)$ http://registry2.it.csiro.au/def/gba$1?_format=rdf [R=302,L]
+        RewriteRule ^/def/gba(.*)$ http://registry.it.csiro.au/def/gba$1?_format=rdf [R=302,L]
         RewriteCond %{HTTP:Accept} application/rdf+xml [NC]
-        RewriteRule ^/def/gba(.*)$ http://registry2.it.csiro.au/def/gba$1?_format=rdf [R=302,L]
-        RewriteRule ^/def/gba(.*).rdf$ http://registry2.it.csiro.au/def/gba$1?_format=rdf [R=302,L]        
-        RewriteRule ^/def/gba(.*)$ http://registry2.it.csiro.au/def/gba$1 [R=302,L]
+        RewriteRule ^/def/gba(.*)$ http://registry.it.csiro.au/def/gba$1?_format=rdf [R=302,L]
+        RewriteRule ^/def/gba(.*).rdf$ http://registry.it.csiro.au/def/gba$1?_format=rdf [R=302,L]        
+        RewriteRule ^/def/gba(.*)$ http://registry.it.csiro.au/def/gba$1 [R=302,L]
 
 
         # http://linked.data.gov.au/def/reg-status
