updated TERN server, CRS Ont RDF file

--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -209,6 +209,14 @@
         RewriteRule ^/def/borehole$ http://www.linked.data.gov.au/def/borehole [R=302,L]
         RewriteRule ^/def/borehole/(.*)$ http://www.linked.data.gov.au/def/borehole/#$1 [R=302,L,NE]
 
+        # http://linked.data.gov.au/def/crs
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/def/crs(.*)$ http://www.linked.data.gov.au/def/crs.ttl? [R=302,L]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/crs(.*)$ http://www.linked.data.gov.au/def/crs/schema/crs.ttl [R=302,L]
+        RewriteRule ^/def/crs(.*).ttl$ http://www.linked.data.gov.au/def/crs/schema/crs.ttl [R=302,L]
+        RewriteRule ^/def/crs(.*)$ http://www.linked.data.gov.au/def/crs$1 [R=302,L]
+
         # http://linked.data.gov.au/def/dataset
 	# all requests for RDF (turtle) just go to the whole borehole.ttl doc
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
@@ -422,14 +430,15 @@
 
 	# Multiple Vocabs: TERN's CorVeg
 	# http://linked.data.gov.au/def/corveg-cv
-	RewriteRule ^/def/corveg-cv$ http://vocabs.tern.org.au/corveg [R=302,L]
+	RewriteRule ^/def/corveg-cv$ http://linkeddata.tern.org.au/corveg [R=302,L]
 
 	RewriteCond %{HTTP:Accept} text/turtle [NC]
-	RewriteRule ^/def/corveg-cv(.*) http://vocabs.tern.org.au/corveg/id/http://linked.data.gov.au/def/corveg-cv$1?_format=text/turtle [R=302,L]	
-	RewriteRule ^/def/corveg-cv(.*) http://vocabs.tern.org.au/corveg/id/http://linked.data.gov.au/def/corveg-cv$1 [R=302,L]
+	RewriteRule ^/def/corveg-cv(.*) http://linkeddata.tern.org.au/corveg/id/http://linked.data.gov.au/def/corveg-cv$1?_format=text/turtle [R=302,L]	
+	RewriteRule ^/def/corveg-cv(.*) http://linkeddata.tern.org.au/corveg/id/http://linked.data.gov.au/def/corveg-cv$1 [R=302,L]
 
 
 	# Linksets
+	RewriteRule ^/dataset/agiftcrs-th http://www.linked.data.gov.au/nonresolving-uri [L,R=302]
 
         #
         #       AGLDWG website - legacy link redirector
