--- a/conf/www.linked.data.gov.au.conf
+++ b/conf/www.linked.data.gov.au.conf
@@ -9,6 +9,8 @@
 
         RewriteEngine  on
 
+        ProxyPass "/nonresolving-uri"  "http://203.101.224.166/nonresolving.html"
+
         ProxyPass "/agrif-demo"  "http://203.101.224.166/agrif-demo"
         ProxyPassReverse "/agrif-demo"  "http://203.101.224.166/agrif-demo"
 
