--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -430,11 +430,11 @@
 
 	# Multiple Vocabs: TERN's CorVeg
 	# http://linked.data.gov.au/def/corveg-cv
-	RewriteRule ^/def/corveg-cv$ http://linkeddata.tern.org.au/def/corveg [R=302,L]
+	RewriteRule ^/def/corveg-cv$ http://linkeddata.tern.org.au/viewer/corveg [R=302,L]
 
 	RewriteCond %{HTTP:Accept} text/turtle [NC]
-	RewriteRule ^/def/corveg-cv(.*) http://linkeddata.tern.org.au/def/corveg/id/http://linked.data.gov.au/def/corveg-cv$1?_format=text/turtle [R=302,L]	
-	RewriteRule ^/def/corveg-cv(.*) http://linkeddata.tern.org.au/def/corveg/id/http://linked.data.gov.au/def/corveg-cv$1 [R=302,L]
+	RewriteRule ^/def/corveg-cv(.*) http://linkeddata.tern.org.au/viewer/corveg/id/http://linked.data.gov.au/def/corveg-cv$1?_format=text/turtle [R=302,L]	
+	RewriteRule ^/def/corveg-cv(.*) http://linkeddata.tern.org.au/viewer/corveg/id/http://linked.data.gov.au/def/corveg-cv$1 [R=302,L]
 
 
 	# Linksets
